--- a/mypage.html
+++ b/mypage.html
@@ -88,23 +88,23 @@ body {
 		</div>
 		<div id="stickers" class="row">
 			<div id="sticker" class="col s3">
-				<a href="./team12_detail.html"><img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img"></a>
+				<a href="./detail.html"><img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img"></a>
 				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
 			</div>
 			<div id="sticker" class="col s3">
-				<a href="./stickers/001.html"><img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img"></a>
+				<a href="./detail.html"><img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img"></a>
 				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
 			</div>
 			<div id="sticker" class="col s3">
-				<a href="./stickers/001.html"><img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img"></a>
+				<a href="./detail.html"><img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img"></a>
 				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
 			</div>
 			<div id="sticker" class="col s3">
-				<a href="./stickers/001.html"><img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img"></a>
+				<a href="./detail.html"><img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img"></a>
 				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
 			</div>
 			<div id="sticker" class="col s3">
-				<a href="./stickers/001.html"><img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img"></a>
+				<a href="./detail.html"><img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img"></a>
 				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
 			</div>
 		</div>
