--- a/mypage.html
+++ b/mypage.html
@@ -73,7 +73,7 @@ body {
 	<body class="orange lighten-5">
 		<div id="user" class="row">
 			<div class="col s4">
-				<img src="https://1.bp.blogspot.com/-HdrrDLMxxGs/Ws2uzOpk8yI/AAAAAAABLRY/9Td_5zg6Nf4eOkMiTbVdJ8qwuAfHfCltwCLcBGAs/s800/figure_dance.png" class="circle user_detail_img">
+				<img src="./image/face/1.png" class="circle user_detail_img">
 			</div>
 			<div class="detail_data col s6">
 				<span class="detail_title">【USER】</span><span id="user_name" class="user_detail_name">Decrypto Tokyo Team12</span>
@@ -88,23 +88,51 @@ body {
 		</div>
 		<div id="stickers" class="row">
 			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img"></a>
+				<a href="./detail.html"><img src="./image/sticker/1.png" class="sticker_img"></a>
 				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
 			</div>
 			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img"></a>
+				<a href="./detail.html"><img src="./image/sticker/2.png" class="sticker_img"></a>
 				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
 			</div>
 			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img"></a>
+				<a href="./detail.html"><img src="./image/sticker/3.png" class="sticker_img"></a>
 				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
 			</div>
 			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img"></a>
+				<a href="./detail.html"><img src="./image/sticker/4.png" class="sticker_img"></a>
 				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
 			</div>
 			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img"></a>
+				<a href="./detail.html"><img src="./image/sticker/1.png" class="sticker_img"></a>
+				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+			</div>
+			<div id="sticker" class="col s3">
+				<a href="./detail.html"><img src="./image/sticker/2.png" class="sticker_img"></a>
+				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+			</div>
+			<div id="sticker" class="col s3">
+				<a href="./detail.html"><img src="./image/sticker/3.png" class="sticker_img"></a>
+				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+			</div>
+			<div id="sticker" class="col s3">
+				<a href="./detail.html"><img src="./image/sticker/4.png" class="sticker_img"></a>
+				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+			</div>
+			<div id="sticker" class="col s3">
+				<a href="./detail.html"><img src="./image/sticker/1.png" class="sticker_img"></a>
+				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+			</div>
+			<div id="sticker" class="col s3">
+				<a href="./detail.html"><img src="./image/sticker/2.png" class="sticker_img"></a>
+				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+			</div>
+			<div id="sticker" class="col s3">
+				<a href="./detail.html"><img src="./image/sticker/3.png" class="sticker_img"></a>
+				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+			</div>
+			<div id="sticker" class="col s3">
+				<a href="./detail.html"><img src="./image/sticker/4.png" class="sticker_img"></a>
 				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
 			</div>
 		</div>
