--- a/detail.html
+++ b/detail.html
@@ -60,7 +60,7 @@ body {
 		</div>
 		<div id="detail">
 			
-			<img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="detail_logo">
+			<img src="./image/sticker/1.png" class="detail_logo">
 			<br>
 			<span class="title">カレーの伝道師</span>
 			<input type="button" id="add_sticker" value="Add" class="btn-floating btn-large cyan pulse">
@@ -88,25 +88,25 @@ body {
 			</div>
 			<div id="other02" class="user col s3">
 				<a href="./mypage.html">
-					<img src="https://3.bp.blogspot.com/--IJXuiGRidY/WNir5IfLk3I/AAAAAAABC28/81L3mxcIe9EoqcK9uqCXbVxZ4YO36JzlQCLcB/s170/animal_mitsubachi.png" class="sticker_img">
+					<img src="./image/face/1.png" class="sticker_img">
 				</a>
 				<p>ユーザ２</p>
 			</div>
 			<div id="other03" class="user col s3">
 				<a href="./mypage.html">
-					<img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img">
+					<img src="./image/face/2.png" class="sticker_img">
 				</a>
 				<p>ユーザ３</p>
 			</div>
 			<div id="other04" class="user col s3">
 				<a href="./mypage.html">
-					<img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img">
+					<img src="./image/face/3.png" class="sticker_img">
 				</a>
 				<p>ユーザ４</p>
 			</div>
 			<div id="other05" class="user col s3">
 				<a href="./mypage.html">
-					<img src="https://en.bitcoin.it/w/images/en/2/29/BC_Logo_.png" class="sticker_img">
+					<img src="./image/face/4.png" class="sticker_img">
 				</a>
 				<p>ユーザ５</p>
 			</div>
