--- a/main.html
+++ b/main.html
@@ -29,15 +29,15 @@
           </div>
           <div id="search_lists" class="row">
             <div class="col s4">
-              <img src="img/bitcoin.png" alt="ブロックチェーン1">
+              <img src="image/sticker/1.png" alt="ブロックチェーン1">
               <p>ブロックチェーン1</p>
             </div>
             <div class="col s4">
-              <img src="img/bitFlyer.png" alt="ブロックチェーン2">
+              <img src="image/sticker/2.png" alt="ブロックチェーン2">
               <p>ブロックチェーン2</p>
             </div>
             <div class="col s4">
-              <img src="img/omisego.png" alt="ブロックチェーン3" style="height: 40px;">
+              <img src="image/sticker/3.png" alt="ブロックチェーン3" style="height: 40px;">
               <p>ブロックチェーン3</p>
             </div>
           </div>
@@ -49,39 +49,21 @@
           <ul id="near_lists">
               <li class="near_list icons">
                 <a href="mypage.html">
-                  <img src="img/icon.jpg" class="circle" alt="近くのユーザー1" style="height: 100px; width: 100px;">
+                  <img src="image/face/1.png" class="circle" alt="近くのユーザー1" style="height: 100px; width: 100px;">
                   <p>ユーザー1</p>
                 </a>
               </li>
               <li class="near_list icons">
                 <a href="mypage.html">
-                  <img src="img/icon.jpg" class="circle" alt="近くのユーザー2" style="height: 100px; width: 100px;">
+                  <img src="image/face/2.png" class="circle" alt="近くのユーザー2" style="height: 100px; width: 100px;">
                   <p>ユーザー2</p>
                 </a>
               </li>
               <li class="near_list icons">
                   <a href="mypage.html">
-                    <img src="img/icon.jpg" class="circle" alt="近くのユーザー3" style="height: 100px; width: 100px;">
+                    <img src="image/face/3.png" class="circle" alt="近くのユーザー3" style="height: 100px; width: 100px;">
                     <p>ユーザー3</p>
                   </a>
-              </li>
-              <li class="near_list icons">
-                <a href="mypage.html">
-                  <img src="img/icon.jpg" class="circle" alt="近くのユーザー4" style="height: 100px; width: 100px;">
-                  <p>ユーザー4</p>
-                </a>
-              </li>
-              <li class="near_list icons">
-                <a href="mypage.html">
-                  <img src="img/icon.jpg" class="circle" alt="近くのユーザー5" style="height: 100px; width: 100px;">
-                  <p>ユーザー5</p>
-                </a>
-              </li>
-              <li class="near_list icons">
-                <a href="mypage.html">
-                  <img src="img/icon.jpg" class="circle" alt="近くのユーザー6" style="height: 100px; width: 100px;">
-                  <p>ユーザー6</p>
-                </a>
               </li>
             </ul>
         </div>
@@ -91,28 +73,16 @@
           <p>フレンドユーザー</p>
           <ul id="follow_lists">
               <li class="follow_list icons">
-                <img src="img/icon.jpg" class="circle"  alt="フレンドユーザー1" style="height: 100px; width: 100px;">
+                <img src="image/face/4.png" class="circle"  alt="フレンドユーザー1" style="height: 100px; width: 100px;">
                 <p>フレンドユーザー1</p>
               </li>
               <li class="follow_list icons">
-                <img src="img/icon.jpg" class="circle"  alt="フレンドユーザー2" style="height: 100px; width: 100px;">
+                <img src="image/face/5.png" class="circle"  alt="フレンドユーザー2" style="height: 100px; width: 100px;">
                 <p>フレンドユーザー2</p>
               </li>
               <li class="follow_list icons">
-                <img src="img/icon.jpg" class="circle" alt="フレンドユーザー3" style="height: 100px; width: 100px;">
+                <img src="image/face/6.png" class="circle" alt="フレンドユーザー3" style="height: 100px; width: 100px;">
                 <p>フレンドユーザー3</p>
-              </li>
-              <li class="follow_list icons">
-                <img src="img/icon.jpg" class="circle" alt="フレンドユーザー4" style="height: 100px; width: 100px;">
-                <p>フレンドユーザー4</p>
-              </li>
-              <li class="follow_list icons">
-                <img src="img/icon.jpg" class="circle" alt="フレンドユーザー5" style="height: 100px; width: 100px;">
-                <p>フレンドユーザー5</p>
-              </li>
-              <li class="follow_list icons">
-                <img src="img/icon.jpg" class="circle" alt="フレンドユーザー6" style="height: 100px; width: 100px;">
-                <p>フレンドユーザー6</p>
               </li>
             </ul>
         </div>
