--- a/detail.html
+++ b/detail.html
@@ -62,7 +62,7 @@ body {
 			
 			<img src="./image/sticker/1.png" class="detail_logo">
 			<br>
-			<span class="title">カレーの伝道師</span>
+			<span class="title">NUXTJS</span>
 			<input type="button" id="add_sticker" value="Add" class="btn-floating btn-large cyan pulse">
 			<br>
 			<div class="contacts">
@@ -75,7 +75,7 @@ body {
 			</div>
 			<p id="note">
 				備考：<br>
-				カレー屋に集う者たち
+				○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○
 			</p>
 		</div>
 		<p>
@@ -84,25 +84,49 @@ body {
 				<a href="./mypage.html">
 					<img src="./image/face/1.png" class="sticker_img">
 				</a>
-				<p>Team 12</p>
+				<p>ユーザ１</p>
 			</div>
 			<div id="other03" class="user col s3">
 				<a href="./mypage.html">
 					<img src="./image/face/2.png" class="sticker_img">
 				</a>
-				<p>ユーザ３</p>
+				<p>ユーザ２</p>
 			</div>
 			<div id="other04" class="user col s3">
 				<a href="./mypage.html">
 					<img src="./image/face/3.png" class="sticker_img">
 				</a>
-				<p>ユーザ４</p>
+				<p>ユーザ３</p>
 			</div>
 			<div id="other05" class="user col s3">
 				<a href="./mypage.html">
 					<img src="./image/face/4.png" class="sticker_img">
 				</a>
-				<p>ユーザ５</p>
+				<p>ユーザ４</p>
+			</div>
+			<div id="other01" class="user col s3">
+				<a href="./mypage.html">
+					<img src="./image/face/1.png" class="sticker_img">
+				</a>
+				<p>ユーザ１</p>
+			</div>
+			<div id="other03" class="user col s3">
+				<a href="./mypage.html">
+					<img src="./image/face/2.png" class="sticker_img">
+				</a>
+				<p>ユーザ２</p>
+			</div>
+			<div id="other04" class="user col s3">
+				<a href="./mypage.html">
+					<img src="./image/face/3.png" class="sticker_img">
+				</a>
+				<p>ユーザ３</p>
+			</div>
+			<div id="other05" class="user col s3">
+				<a href="./mypage.html">
+					<img src="./image/face/4.png" class="sticker_img">
+				</a>
+				<p>ユーザ４</p>
 			</div>
 		</div>
 		<!--JavaScript at end of body for optimized loading-->
