--- a/mypage.html
+++ b/mypage.html
@@ -89,51 +89,51 @@ body {
 		<div id="stickers" class="row">
 			<div id="sticker" class="col s3">
 				<a href="./detail.html"><img src="./image/sticker/1.png" class="sticker_img"></a>
-				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+				<p id="sticker_title_001" class="sticker_title">ステッカー</p>
 			</div>
 			<div id="sticker" class="col s3">
 				<a href="./detail.html"><img src="./image/sticker/2.png" class="sticker_img"></a>
-				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+				<p id="sticker_title_001" class="sticker_title">ステッカー</p>
 			</div>
 			<div id="sticker" class="col s3">
 				<a href="./detail.html"><img src="./image/sticker/3.png" class="sticker_img"></a>
-				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+				<p id="sticker_title_001" class="sticker_title">ステッカー</p>
 			</div>
 			<div id="sticker" class="col s3">
 				<a href="./detail.html"><img src="./image/sticker/4.png" class="sticker_img"></a>
-				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+				<p id="sticker_title_001" class="sticker_title">ステッカー</p>
 			</div>
 			<div id="sticker" class="col s3">
 				<a href="./detail.html"><img src="./image/sticker/1.png" class="sticker_img"></a>
-				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+				<p id="sticker_title_001" class="sticker_title">ステッカー</p>
 			</div>
 			<div id="sticker" class="col s3">
 				<a href="./detail.html"><img src="./image/sticker/2.png" class="sticker_img"></a>
-				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+				<p id="sticker_title_001" class="sticker_title">ステッカー</p>
 			</div>
 			<div id="sticker" class="col s3">
 				<a href="./detail.html"><img src="./image/sticker/3.png" class="sticker_img"></a>
-				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+				<p id="sticker_title_001" class="sticker_title">ステッカー</p>
 			</div>
 			<div id="sticker" class="col s3">
 				<a href="./detail.html"><img src="./image/sticker/4.png" class="sticker_img"></a>
-				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+				<p id="sticker_title_001" class="sticker_title">ステッカー</p>
 			</div>
 			<div id="sticker" class="col s3">
 				<a href="./detail.html"><img src="./image/sticker/1.png" class="sticker_img"></a>
-				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+				<p id="sticker_title_001" class="sticker_title">ステッカー</p>
 			</div>
 			<div id="sticker" class="col s3">
 				<a href="./detail.html"><img src="./image/sticker/2.png" class="sticker_img"></a>
-				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+				<p id="sticker_title_001" class="sticker_title">ステッカー</p>
 			</div>
 			<div id="sticker" class="col s3">
 				<a href="./detail.html"><img src="./image/sticker/3.png" class="sticker_img"></a>
-				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+				<p id="sticker_title_001" class="sticker_title">ステッカー</p>
 			</div>
 			<div id="sticker" class="col s3">
 				<a href="./detail.html"><img src="./image/sticker/4.png" class="sticker_img"></a>
-				<p id="sticker_title_001" class="sticker_title">BitCoin</p>
+				<p id="sticker_title_001" class="sticker_title">ステッカー</p>
 			</div>
 		</div>
 		<!--JavaScript at end of body for optimized loading-->
