--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <!--全ページ共通のヘッダー部分(固定する)-->
         <div id="top_header" class="boxlist" style="height: 80px;">
 			<div id="header_logo">
-				<img src="img/logo.png" alt="ロゴ" style="height: 40px;width: 100px;" class="centerpos">
+				<img src="image/logo.png" alt="ロゴ" style="height: 40px;width: 100px;" class="centerpos">
 				<div id="user_info">
 					<p id="name">ブロック・チェン</p>
-					<img src="img/icon.jpg" class="circle" alt="アイコン" style="width:70px;">
+					<img src="image/face/99.png" class="circle" alt="アイコン" style="width:70px;">
 				</div>
 			</div>
 		</div>
