--- a/main.html
+++ b/main.html
@@ -25,20 +25,26 @@
         <div id="search" class="boxlist">
           <div id="searchbox">
             <input type="text" name="searchtext" size="10" maxlength="20" placeholder="Search">
-            <img src="img/search_icon.png">
+            <img src="image/sticker/search_icon.png">
           </div>
           <div id="search_lists" class="row">
             <div class="col s4">
-              <img src="image/sticker/1.png" alt="ブロックチェーン1">
-              <p>ブロックチェーン1</p>
+				<a href="detail.html">
+					<img src="image/sticker/1.png" alt="ブロックチェーン1">
+					<p>ブロックチェーン1</p>
+				</a>
             </div>
             <div class="col s4">
-              <img src="image/sticker/2.png" alt="ブロックチェーン2">
-              <p>ブロックチェーン2</p>
+				<a href="detail.html">
+					<img src="image/sticker/2.png" alt="ブロックチェーン2">
+					<p>ブロックチェーン2</p>
+				</a>
             </div>
             <div class="col s4">
-              <img src="image/sticker/3.png" alt="ブロックチェーン3" style="height: 40px;">
-              <p>ブロックチェーン3</p>
+				<a href="detail.html">
+					<img src="image/sticker/3.png" alt="ブロックチェーン3">
+					<p>ブロックチェーン3</p>
+				</a>
             </div>
           </div>
         </div>
