--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 			<div id="header_logo">
 				<img src="image/logo.png" alt="ロゴ" style="height: 40px;width: 100px;" class="centerpos">
 				<div id="user_info">
-					<p id="name">ブロック・チェン</p>
+					<p id="name">Mayato Hattori</p>
 					<img src="image/face/99.png" class="circle" alt="アイコン" style="width:70px;">
 				</div>
 			</div>
 		</div>
-	<iframe src="./main.html" name="pages" sytle="width:html; height:700px;">
+	<iframe src="./main.html" name="pages">
 	</iframe>
 
 	<!--JavaScript at end of body for optimized loading-->
