--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				</div>
 			</div>
 		</div>
-	<iframe src="./main.html" name="pages">
+	<iframe src="./main.html" name="pages" height="700" width="600">
 	</iframe>
 
 	<!--JavaScript at end of body for optimized loading-->
