--- a/mypage.html
+++ b/mypage.html
@@ -14,6 +14,7 @@
 <style>
 
 body {
+	  background-color: #e0e0e0;
 	width:600px;
 	height:700px;
 }
@@ -70,7 +71,7 @@ body {
 
 	</head>
 
-	<body class="orange lighten-5">
+	<body>
 		<div id="user" class="row">
 			<div class="col s4">
 				<img src="./image/face/1.png" class="circle user_detail_img">
