--- a/detail.html
+++ b/detail.html
@@ -13,6 +13,7 @@
 body {
 	width:600px;
 	height:700px;
+	  background-color: #e0e0e0;
 }
 
 #detail {
@@ -55,7 +56,7 @@ body {
 
 	</head>
 
-	<body class="orange lighten-5">
+	<body>
 		<div id="header">
 		</div>
 		<div id="detail">
