--- a/detail.html
+++ b/detail.html
@@ -20,7 +20,7 @@ body {
 	height:60%;
 	padding: 10px;
 	text-align:center;
-	border-bottom: solid 5px #ff8a65;
+	border-bottom: solid 5px #FFFFFF;
 	margin: 5px;
 }
 .title {
