--- a/mypage.html
+++ b/mypage.html
@@ -23,7 +23,7 @@ body {
 	height:30%;
 	clear: both;
 	text-align: center;
-	border-bottom: solid 5px #ff8a65;
+	border-bottom: solid 5px #FFFFFF;
 	margin: 5px;
 	
 }
