--- a/main.html
+++ b/main.html
@@ -52,20 +52,20 @@
         <!--近くのユーザーが出てくる-->
         <div  class="boxlist">
           <p>近くのユーザー</p>
-          <ul id="near_lists">
-              <li class="near_list icons">
+          <ul id="near_lists" class="row">
+              <li class="near_list icons col s4">
                 <a href="mypage.html">
                   <img src="image/face/1.png" class="circle" alt="近くのユーザー1" style="height: 100px; width: 100px;">
                   <p>ユーザー1</p>
                 </a>
               </li>
-              <li class="near_list icons">
+              <li class="near_list icons col s4">
                 <a href="mypage.html">
                   <img src="image/face/2.png" class="circle" alt="近くのユーザー2" style="height: 100px; width: 100px;">
                   <p>ユーザー2</p>
                 </a>
               </li>
-              <li class="near_list icons">
+              <li class="near_list icons col s4">
                   <a href="mypage.html">
                     <img src="image/face/3.png" class="circle" alt="近くのユーザー3" style="height: 100px; width: 100px;">
                     <p>ユーザー3</p>
@@ -77,18 +77,24 @@
         <!--フォローしているユーザーが出てくる-->
         <div class="boxlist">
           <p>フレンドユーザー</p>
-          <ul id="follow_lists">
+          <ul id="follow_lists" class="row">
               <li class="follow_list icons">
-                <img src="image/face/4.png" class="circle"  alt="フレンドユーザー1" style="height: 100px; width: 100px;">
-                <p>フレンドユーザー1</p>
+				<a href="mypage.html">
+					<img src="image/face/4.png" class="circle"  alt="フレンドユーザー1" style="height: 100px; width: 100px;">
+					<p>フレンドユーザー1</p>
+				</a>
               </li>
               <li class="follow_list icons">
-                <img src="image/face/5.png" class="circle"  alt="フレンドユーザー2" style="height: 100px; width: 100px;">
-                <p>フレンドユーザー2</p>
+				<a href="mypage.html">
+					<img src="image/face/5.png" class="circle"  alt="フレンドユーザー2" style="height: 100px; width: 100px;">
+					<p>フレンドユーザー2</p>
+				</a>
               </li>
               <li class="follow_list icons">
-                <img src="image/face/6.png" class="circle" alt="フレンドユーザー3" style="height: 100px; width: 100px;">
-                <p>フレンドユーザー3</p>
+				<a href="mypage.html">
+					<img src="image/face/6.png" class="circle" alt="フレンドユーザー3" style="height: 100px; width: 100px;">
+					<p>フレンドユーザー3</p>
+				</a>
               </li>
             </ul>
         </div>
