--- a/main.html
+++ b/main.html
@@ -78,19 +78,19 @@
         <div class="boxlist">
           <p>フレンドユーザー</p>
           <ul id="follow_lists" class="row">
-              <li class="follow_list icons">
+              <li class="follow_list icons col s4">
 				<a href="mypage.html">
 					<img src="image/face/4.png" class="circle"  alt="フレンドユーザー1" style="height: 100px; width: 100px;">
 					<p>フレンドユーザー1</p>
 				</a>
               </li>
-              <li class="follow_list icons">
+              <li class="follow_list icons col s4">
 				<a href="mypage.html">
 					<img src="image/face/5.png" class="circle"  alt="フレンドユーザー2" style="height: 100px; width: 100px;">
 					<p>フレンドユーザー2</p>
 				</a>
               </li>
-              <li class="follow_list icons">
+              <li class="follow_list icons col s4">
 				<a href="mypage.html">
 					<img src="image/face/6.png" class="circle" alt="フレンドユーザー3" style="height: 100px; width: 100px;">
 					<p>フレンドユーザー3</p>
