--- a/main.html
+++ b/main.html
@@ -54,10 +54,10 @@
           <p>近くのユーザー</p>
           <ul id="near_lists" class="row">
               <li class="near_list icons col s4">
-                <a href="mypage.html" class="waves-effect waves-light btn"></a>
-				  <img src="image/face/1.png" class="circle" alt="近くのユーザー1" style="height: 100px; width: 100px;">
-			  	</a>
-				<p>ユーザー1</p>
+                <a href="mypage.html">
+                  <img src="image/face/1.png" class="circle" alt="近くのユーザー1" style="height: 100px; width: 100px;">
+                  <p>ユーザー1</p>
+                </a>
               </li>
               <li class="near_list icons col s4">
                 <a href="mypage.html">
