--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
           <ul id="near_lists" class="row">
               <li class="near_list icons col s4">
                 <a href="mypage.html">
-                  <img src="image/face/1.png" class="circle" alt="近くのユーザー1" style="height: 100px; width: 100px;">
+                  <img src="https://qiita-image-store.s3.amazonaws.com/0/114040/profile-images/1515285262" class="circle" alt="近くのユーザー1" style="height: 100px; width: 100px;">
                   <p>ユーザー1</p>
                 </a>
               </li>
