--- a/main.html
+++ b/main.html
@@ -6,16 +6,24 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-      <link rel="stylesheet" type="text/css" href="index.css">
+	  <link rel="stylesheet" type="text/css" href="index.css">
 
           <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
       <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	  
+	<script type="text/javascript">
+		$(document).ready(function(){
+			alert("jQueryファイルの読み込み完了でーす。");
+		});
+	</script>
+		
     </head>
 
     <body>
@@ -55,7 +63,7 @@
           <ul id="near_lists" class="row">
               <li class="near_list icons col s4">
                 <a href="mypage.html">
-                  <img src="https://qiita-image-store.s3.amazonaws.com/0/114040/profile-images/1515285262" class="circle" alt="近くのユーザー1" style="height: 100px; width: 100px;">
+                  <img src="image/face/1.png" class="circle" alt="近くのユーザー1" style="height: 100px; width: 100px;">
                   <p>ユーザー1</p>
                 </a>
               </li>
