--- a/main.html
+++ b/main.html
@@ -16,11 +16,11 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
       <!--Let browser know website is optimized for mobile-->
-	  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	  
 	<script type="text/javascript">
-		$(document).ready(function(){
-			alert("jQueryファイルの読み込み完了でーす。");
+		$('#searchbutton').on('click', function() {
+			alert("ボタン押されました");
 		});
 	</script>
 		
@@ -38,7 +38,7 @@
           <div id="search_lists" class="row">
             <div class="col s4">
 				<a href="detail.html">
-					<img src="image/sticker/1.png" alt="ブロックチェーン1">
+					<img src="image/sticker/1.png" alt="ブロックチェーン1" id="searchbutton">
 					<p>ブロックチェーン1</p>
 				</a>
             </div>
