--- a/main.html
+++ b/main.html
@@ -13,18 +13,18 @@
 
     <!-- Compiled and minified JavaScript -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
       <!--Let browser know website is optimized for mobile-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	  
+
 	<script type="text/javascript">
 		$('button').on('click', function() {
 			var $element = document.getElementById( "" );
  			$element.style.color = $color;
 		});
 	</script>
-		
+
     </head>
 
     <body>
@@ -34,24 +34,27 @@
         <div id="search" class="boxlist">
           <div id="searchbox">
             <input type="text" name="searchtext" size="10" maxlength="20" placeholder="Search">
-            <button>
+            <!-- <button>
 				<img src="image/sticker/search_icon.png">
-			</button>
+			</button> -->
           </div>
           <div id="search_lists" class="row">
-            <div class="col s4 searchvisible">
+            <!-- <div class="col s4 searchvisible"> -->
+            <div class="col s4">
 				<a href="detail.html">
 					<img src="image/sticker/1.png" alt="ブロックチェーン1" id="searchbutton">
 					<p>ブロックチェーン1</p>
 				</a>
             </div>
-            <div class="col s4">
-				<a href="detail.html searchvisible">
+            <!-- <div class="col s4"> -->
+            <div class="col">
+				<a href="detail.html">
 					<img src="image/sticker/2.png" alt="ブロックチェーン2">
 					<p>ブロックチェーン2</p>
 				</a>
             </div>
-            <div class="col s4 searchvisible">
+            <!-- <div class="col s4 searchvisible"> -->
+            <div class="col s4">
 				<a href="detail.html">
 					<img src="image/sticker/3.png" alt="ブロックチェーン3">
 					<p>ブロックチェーン3</p>
