--- a/detail.html
+++ b/detail.html
@@ -383,6 +383,8 @@ body {
 .user{
 	display:inline-block;
 	text-align:center;
+	width: 145px;
+	height: 145px;
 }
 .sticker_img {
 	height: 100px;
@@ -401,7 +403,8 @@ body {
 			<br>
 			<span class="title" id="stickerName"></span>
 			<input type="button" id="add_sticker" value="Add" class="btn-floating btn-large cyan pulse" onclick="obtainSticker();">
-			<br>
+
+			<!-- <br>
 			<div class="contacts">
 				<div>
 					【URL】<a id="sticker_url" class="sticker_url" src="https://en.wikipedia.org/wiki/Bitcoin">https://test.curry.org/</a>
@@ -412,6 +415,7 @@ body {
 			</div>
 			<p class="note">備考：</p>
 			<p id="stickerDescription" class="note"></p>
+-->
 		</div>
 		<p>
 		<div id="users" class="row">
