--- a/mypage.html
+++ b/mypage.html
@@ -359,7 +359,7 @@ body {
 	height:70%;
 	float:left;
 	text-align:center;
-	overflow-y: auto;
+	/** overflow-y: auto; **/
 }
 
 .sticker_title{
@@ -370,7 +370,8 @@ body {
 
 
 .sticker_img {
-	height: 100px;
+	height: 145px;
+	
 }
 </style>
 
