--- a/main.html
+++ b/main.html
@@ -105,7 +105,7 @@
 				</a>
               </li>
               <li class="follow_list icons col s4">
-				<a href="mypage.html">
+				<a href="friend.html">
 					<img src="image/face/6.png" class="circle" alt="フレンドユーザー3" style="height: 100px; width: 100px;">
 					<p>フレンドユーザー3</p>
 				</a>
