--- a/detail.html
+++ b/detail.html
@@ -384,8 +384,7 @@ body {
 .user{
 	display:inline-block;
 	text-align:center;
-	width: 145px;
-	height: 145px;
+	margin:20px;
 }
 .sticker_img {
 	height: 100px;
