--- a/detail.html
+++ b/detail.html
@@ -353,7 +353,7 @@ body {
 }
 
 #detail {
-	height:60%;
+	/**height:60%;**/
 	padding: 10px;
 	text-align:center;
 	border-bottom: solid 5px #FFFFFF;
@@ -402,7 +402,7 @@ body {
 			<img src="" class="detail_logo" id="stickerImage">
 			<br>
 			<span class="title" id="stickerName"></span>
-			<input type="button" id="add_sticker" value="Add" class="btn-floating btn-large cyan pulse" onclick="obtainSticker();">
+			<input type="button" id="add_sticker" value="Add" class="waves-effect waves-light btn"" onclick="obtainSticker();">
 
 			<!-- <br>
 			<div class="contacts">
