--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 				<img src="image/logo.png" alt="ロゴ" style="height: 40px;width: 100px;" class="centerpos">
 				<div id="user_info">
 					<p id="name">Mayato Hattori</p>
-					<img src="image/face/99.png" class="circle" alt="アイコン" style="width:70px;">
+					<a href="maypage.html">
+					  <img src="image/face/99.png" class="circle" alt="アイコン" style="width:70px;">
+					</a>
 				</div>
 			</div>
 		</div>
