--- a/detail.html
+++ b/detail.html
@@ -384,7 +384,7 @@ body {
 .user{
 	display:inline-block;
 	text-align:center;
-	margin:20px;
+	margin:10px;
 }
 .sticker_img {
 	height: 100px;
@@ -401,7 +401,7 @@ body {
 
 			<img src="" class="detail_logo" id="stickerImage">
 			<br>
-			<span class="title" id="stickerName"></span>
+			<p class="title" id="stickerName"></p>
 			<input type="button" id="add_sticker" value="Add" class="waves-effect waves-light btn"" onclick="obtainSticker();">
 
 			<!-- <br>
