--- a/detail.html
+++ b/detail.html
@@ -353,11 +353,11 @@ body {
 }
 
 #detail {
-	/**height:60%;**/
-	padding: 5px;
+	/**height:60%;
+	padding: 5px;**/
 	text-align:center;
 	border-bottom: solid 5px #FFFFFF;
-	margin: 5px;
+	/** margin: 5px;**/
 }
 .title {
 	font-size: 30px;
