--- a/detail.html
+++ b/detail.html
@@ -384,7 +384,9 @@ body {
 .user{
 	display:inline-block;
 	text-align:center;
-	margin:10px;
+	margin:10px 0px 0px 10px;
+	width:145px;
+	height:145px;
 }
 .sticker_img {
 	height: 100px;
