--- a/detail.html
+++ b/detail.html
@@ -391,6 +391,10 @@ body {
 .sticker_img {
 	height: 100px;
 }
+a p {
+	margin: 0px;
+	padding:0px;
+	}
 </style>
 
 
@@ -403,7 +407,7 @@ body {
 
 			<img src="" class="detail_logo" id="stickerImage">
 			<p class="title" id="stickerName"></p>
-			<input type="button" id="add_sticker" value="Add" class="waves-effect waves-light btn"" onclick="obtainSticker();">
+			<input type="button" id="add_sticker" value="Add" class="waves-effect waves-light btn" onclick="obtainSticker();">
 
 			<!-- <br>
 			<div class="contacts">
