--- a/main.html
+++ b/main.html
@@ -63,7 +63,7 @@
 
 	  <!--近くのユーザーが出てくる-->
 	  <div  class="boxlist">
-		<p>近くのユーザー</p>
+		<p class="eachtitle">近くのユーザー</p>
 		<ul id="near_lists" class="row">
 			<li class="near_list icons col s4">
 			  <a href="mypage.html">
@@ -88,7 +88,7 @@
 
 	  <!--フォローしているユーザーが出てくる-->
 	  <div class="boxlist">
-		<p>フレンドユーザー</p>
+		<p class="eachtitle">フレンドユーザー</p>
 		<ul id="follow_lists" class="row">
 			<li class="follow_list icons col s4">
 			  <a href="mypage.html">
