--- a/detail.html
+++ b/detail.html
@@ -353,8 +353,8 @@ body {
 }
 
 #detail {
-	/**height:60%;
-	padding: 5px;**/
+	/**height:60%;**/
+	padding: 5px;
 	text-align:center;
 	border-bottom: solid 5px #FFFFFF;
 	/** margin: 5px;**/
@@ -392,8 +392,9 @@ body {
 }
 .sticker_img {
 	height: 100px;
+	margin:0px;
 }
-a p {
+p {
 	margin: 0px;
 	padding:0px;
 	}
