--- a/detail.html
+++ b/detail.html
@@ -428,49 +428,50 @@ p {
 		<p>
 		<div id="users" class="row">
 			<div id="other01" class="user col s3 circle">
-				<a href="./mypage.html">
+				<a href="./mypage.html" class="circle">
 					<img src="./image/face/1.png" class="sticker_img">
 				</a>
 				<p>ユーザ１</p>
 			</div>
 			<div id="other03" class="user col s3 circle">
-				<a href="./mypage.html">
+				<a href="./mypage.html" class="circle">
 					<img src="./image/face/2.png" class="sticker_img">
 				</a>
 				<p>ユーザ２</p>
+				<a href="./mypage.html" class="circle">
 			</div>
 			<div id="other04" class="user col s3 circle">
-				<a href="./mypage.html">
+				<a href="./mypage.html" class="circle">
 					<img src="./image/face/3.png" class="sticker_img">
 				</a>
 				<p>ユーザ３</p>
 			</div>
 			<div id="other05" class="user col s3 circle">
-				<a href="./mypage.html">
+				<a href="./mypage.html" class="circle">
 					<img src="./image/face/4.png" class="sticker_img">
 				</a>
 				<p>ユーザ４</p>
 			</div>
 			<div id="other01" class="user col s3 circle">
-				<a href="./mypage.html">
+				<a href="./mypage.html" class="circle">
 					<img src="./image/face/1.png" class="sticker_img">
 				</a>
 				<p>ユーザ１</p>
 			</div>
 			<div id="other03" class="user col s3 circle">
-				<a href="./mypage.html">
+				<a href="./mypage.html" class="circle">
 					<img src="./image/face/2.png" class="sticker_img">
 				</a>
 				<p>ユーザ２</p>
 			</div>
 			<div id="other04" class="user col s3 circle">
-				<a href="./mypage.html">
+				<a href="./mypage.html" class="circle">
 					<img src="./image/face/3.png" class="sticker_img">
 				</a>
 				<p>ユーザ３</p>
 			</div>
 			<div id="other05" class="user col s3 circle">
-				<a href="./mypage.html">
+				<a href="./mypage.html" class="circle">
 					<img src="./image/face/4.png" class="sticker_img">
 				</a>
 				<p>ユーザ４</p>
