--- a/detail.html
+++ b/detail.html
@@ -390,7 +390,7 @@ body {
 	width:145px;
 	height:145px;
 }
-.sticker_img circle {
+.sticker_img {
 	height: 100px;
 	margin:0px;
 }
@@ -427,52 +427,52 @@ p {
 		</div>
 		<p>
 		<div id="users" class="row">
-			<div id="other01" class="user col s3 ">
-				<a href="./mypage.html" class="">
-					<img src="./image/face/1.png" class="sticker_img circle">
+			<div id="other01" class="user col s3 circle">
+				<a href="./mypage.html" class="circle">
+					<img src="./image/face/1.png" class=sticker_img circle>
 				</a>
 				<p>ユーザ１</p>
 			</div>
-			<div id="other03" class="user col s3 ">
-				<a href="./mypage.html" class="">
-					<img src="./image/face/2.png" class="sticker_img circle">
+			<div id="other03" class="user col s3 circle">
+				<a href="./mypage.html" class="circle">
+					<img src="./image/face/2.png" class=sticker_img circle>
 				</a>
 				<p>ユーザ２</p>
-				<a href="./mypage.html" class="">
+				<a href="./mypage.html" class="circle">
 			</div>
-			<div id="other04" class="user col s3 ">
-				<a href="./mypage.html" class="">
-					<img src="./image/face/3.png" class="sticker_img circle">
+			<div id="other04" class="user col s3 circle">
+				<a href="./mypage.html" class="circle">
+					<img src="./image/face/3.png" class=sticker_img circle>
 				</a>
 				<p>ユーザ３</p>
 			</div>
-			<div id="other05" class="user col s3 ">
-				<a href="./mypage.html" class="">
-					<img src="./image/face/4.png" class="sticker_img circle">
+			<div id="other05" class="user col s3 circle">
+				<a href="./mypage.html" class="circle">
+					<img src="./image/face/4.png" class=sticker_img circle>
 				</a>
 				<p>ユーザ４</p>
 			</div>
-			<div id="other01" class="user col s3 ">
-				<a href="./mypage.html" class="">
-					<img src="./image/face/1.png" class="sticker_img circle">
+			<div id="other01" class="user col s3 circle">
+				<a href="./mypage.html" class="circle">
+					<img src="./image/face/1.png" class=sticker_img circle>
 				</a>
 				<p>ユーザ１</p>
 			</div>
-			<div id="other03" class="user col s3 ">
-				<a href="./mypage.html" class="">
-					<img src="./image/face/2.png" class="sticker_img circle">
+			<div id="other03" class="user col s3 circle">
+				<a href="./mypage.html" class="circle">
+					<img src="./image/face/2.png" class=sticker_img circle>
 				</a>
 				<p>ユーザ２</p>
 			</div>
-			<div id="other04" class="user col s3 ">
-				<a href="./mypage.html" class="">
-					<img src="./image/face/3.png" class="sticker_img circle">
+			<div id="other04" class="user col s3 circle">
+				<a href="./mypage.html" class="circle">
+					<img src="./image/face/3.png" class=sticker_img circle>
 				</a>
 				<p>ユーザ３</p>
 			</div>
-			<div id="other05" class="user col s3 ">
-				<a href="./mypage.html" class="">
-					<img src="./image/face/4.png" class="sticker_img circle">
+			<div id="other05" class="user col s3 circle">
+				<a href="./mypage.html" class="circle">
+					<img src="./image/face/4.png" class=sticker_img circle>
 				</a>
 				<p>ユーザ４</p>
 			</div>
