--- a/detail.html
+++ b/detail.html
@@ -425,53 +425,52 @@ p {
 			<p id="stickerDescription" class="note"></p>
 -->
 		</div>
-		<p>
+		<p>取得者</p>
 		<div id="users" class="row">
-			<div id="other01" class="user col s3 circle">
-				<a href="./mypage.html" class="circle">
+			<div id="other01" class="user col s3">
+				<a href="./mypage.html">
 					<img src="./image/face/1.png" class="sticker_img circle">
 				</a>
 				<p>ユーザ１</p>
 			</div>
 			<div id="other03" class="user col s3 circle">
-				<a href="./mypage.html" class="circle">
+				<a href="./mypage.html">
 					<img src="./image/face/2.png" class="sticker_img circle">
 				</a>
 				<p>ユーザ２</p>
-				<a href="./mypage.html" class="circle">
 			</div>
 			<div id="other04" class="user col s3 circle">
-				<a href="./mypage.html" class="circle">
+				<a href="./mypage.html">
 					<img src="./image/face/3.png" class="sticker_img circle">
 				</a>
 				<p>ユーザ３</p>
 			</div>
 			<div id="other05" class="user col s3 circle">
-				<a href="./mypage.html" class="circle">
+				<a href="./mypage.html">
 					<img src="./image/face/4.png" class="sticker_img circle">
 				</a>
 				<p>ユーザ４</p>
 			</div>
 			<div id="other01" class="user col s3 circle">
-				<a href="./mypage.html" class="circle">
+				<a href="./mypage.html">
 					<img src="./image/face/1.png" class="sticker_img circle">
 				</a>
 				<p>ユーザ１</p>
 			</div>
 			<div id="other03" class="user col s3 circle">
-				<a href="./mypage.html" class="circle">
+				<a href="./mypage.html">
 					<img src="./image/face/2.png" class="sticker_img circle">
 				</a>
 				<p>ユーザ２</p>
 			</div>
 			<div id="other04" class="user col s3 circle">
-				<a href="./mypage.html" class="circle">
+				<a href="./mypage.html">
 					<img src="./image/face/3.png" class="sticker_img circle">
 				</a>
 				<p>ユーザ３</p>
 			</div>
-			<div id="other05" class="user col s3 circle">
-				<a href="./mypage.html" class="circle">
+			<div id="other05" class="user col s3">
+				<a href="./mypage.html">
 					<img src="./image/face/4.png" class="sticker_img circle">
 				</a>
 				<p>ユーザ４</p>
