--- a/mypage.html
+++ b/mypage.html
@@ -370,8 +370,14 @@ body {
 
 
 .sticker_img {
-	height: 145px;
+	height: 100px;
 	
+}
+a:hover {
+  opacity: 0.7
+}
+a:active {
+  opacity: 0.5
 }
 </style>
 
