--- a/main.html
+++ b/main.html
@@ -65,22 +65,28 @@
 	  <div  class="boxlist">
 		<p class="eachtitle">近くのユーザー</p>
 		<ul id="near_lists" class="row">
-			<li class="near_list icons col s4">
+			<li class="near_list icons col s3">
 			  <a href="mypage.html">
 				<img src="image/face/1.png" class="circle" alt="近くのユーザー1" style="height: 100px; width: 100px;">
 				<p>ユーザー1</p>
 			  </a>
 			</li>
-			<li class="near_list icons col s4">
+			<li class="near_list icons col s3">
 			  <a href="mypage.html">
 				<img src="image/face/2.png" class="circle" alt="近くのユーザー2" style="height: 100px; width: 100px;">
 				<p>ユーザー2</p>
 			  </a>
 			</li>
-			<li class="near_list icons col s4">
+			<li class="near_list icons col s3">
 				<a href="mypage.html">
 				  <img src="image/face/3.png" class="circle" alt="近くのユーザー3" style="height: 100px; width: 100px;">
 				  <p>ユーザー3</p>
+				</a>
+			</li>
+			<li class="near_list icons col s3">
+				<a href="mypage.html">
+					<img src="image/face/7.png" class="circle" alt="近くのユーザー4" style="height: 100px; width: 100px;">
+					<p>ユーザー4</p>
 				</a>
 			</li>
 		  </ul>
@@ -90,24 +96,30 @@
 	  <div class="boxlist">
 		<p class="eachtitle">フレンドユーザー</p>
 		<ul id="follow_lists" class="row">
-			<li class="follow_list icons col s4">
+			<li class="follow_list icons col s3">
 			  <a href="mypage.html">
 				  <img src="image/face/4.png" class="circle"  alt="フレンドユーザー1" style="height: 100px; width: 100px;">
 				  <p>フレンドユーザー1</p>
 			  </a>
 			</li>
-			<li class="follow_list icons col s4">
+			<li class="follow_list icons col s3">
 			  <a href="mypage.html">
 				  <img src="image/face/5.png" class="circle"  alt="フレンドユーザー2" style="height: 100px; width: 100px;">
 				  <p>フレンドユーザー2</p>
 			  </a>
 			</li>
-			<li class="follow_list icons col s4">
+			<li class="follow_list icons col s3">
 			  <a href="mypage.html">
 				  <img src="image/face/6.png" class="circle" alt="フレンドユーザー3" style="height: 100px; width: 100px;">
 				  <p>フレンドユーザー3</p>
 			  </a>
 			</li>
+			<li class="follow_list icons col s3">
+				<a href="mypage.html">
+					<img src="image/face/8.png" class="circle" alt="フレンドユーザー4" style="height: 100px; width: 100px;">
+					<p>フレンドユーザー4</p>
+				</a>
+				</li>
 		  </ul>
 	  </div>
 
