--- a/detail.html
+++ b/detail.html
@@ -404,6 +404,10 @@ a:hover {
 a:active {
   opacity: 0.5
 }
+	.eachtitle {
+	padding-left: 15px;
+    font-size: 20px;
+		font-weight: bold;}
 </style>
 
 
@@ -431,7 +435,7 @@ a:active {
 			<p id="stickerDescription" class="note"></p>
 -->
 		</div>
-		<p>取得者</p>
+		<p class="eachtitle">取得者</p>
 		<div id="users" class="row">
 			<div id="other01" class="user col s3">
 				<a href="./mypage.html">
