--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!Doctype html>
 <html>
 <head>
-		<meta http-equiv="content-type" charset="utf-8">
-		<!--Import Google Icon Font-->
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<!--Import materialize.css-->
-		<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-		<link rel="stylesheet" type="text/css" href="index.css">
+	<meta http-equiv="content-type" charset="utf-8">
+	<!--Import Google Icon Font-->
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!--Import materialize.css-->
+	<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+	<link rel="stylesheet" type="text/css" href="index.css">
   
 			<!-- Compiled and minified CSS -->
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -18,20 +18,112 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
+	<div id="index-contents">
         <!--全ページ共通のヘッダー部分(固定する)-->
         <div id="top_header" class="boxlist" style="height: 80px;">
 			<div id="header_logo">
 				<img src="image/logo.png" alt="ロゴ" style="height: 40px;width: 100px;" class="centerpos">
 				<div id="user_info">
-					<p id="name">Mayato Hattori</p>
-					<a href="mypage.html">
-					  <img src="image/face/99.png" class="circle" alt="アイコン" style="width:70px;">
-					</a>
+					<p id="name">Hattori</p>
+					<img src="image/face/99.png" class="circle" alt="アイコン">
 				</div>
 			</div>
 		</div>
-	<iframe src="./main.html" name="pages" height="700" width="600">
-	</iframe>
+
+		<!--検索欄/テキストボックスに入力したら、その結果がアイコンで返ってくる-->
+		<div id="search" class="boxlist">
+			<div id="searchbox">
+				<input type="text" name="searchtext" size="10" maxlength="20" placeholder="Search">
+				<img src="image/sticker/search_icon.png">
+			</div>
+			<div id="search_lists" class="row">
+				<!-- <div class="col s4 searchvisible"> -->
+				<div class="col s4">
+					<a href="detail.html">
+						<img src="image/sticker/1.png" alt="ブロックチェーン1" id="searchbutton">
+						<p>ブロックチェーン1</p>
+					</a>
+				</div>
+				<!-- <div class="col s4"> -->
+				<div class="col">
+					<a href="detail.html">
+						<img src="image/sticker/2.png" alt="ブロックチェーン2">
+						<p>ブロックチェーン2</p>
+					</a>
+				</div>
+				<!-- <div class="col s4 searchvisible"> -->
+				<div class="col s4">
+					<a href="detail.html">
+						<img src="image/sticker/3.png" alt="ブロックチェーン3">
+						<p>ブロックチェーン3</p>
+					</a>
+				</div>
+			</div>
+			</div>
+	
+		<!--近くのユーザーが出てくる-->
+		<div  class="boxlist">
+			<p class="eachtitle">近くのユーザー</p>
+			<ul id="near_lists" class="row">
+				<li class="near_list icons col s3">
+					<a href="mypage.html">
+					<img src="image/face/1.png" class="circle" alt="近くのユーザー1" style="height: 100px; width: 100px;">
+					<p>ユーザー1</p>
+					</a>
+				</li>
+				<li class="near_list icons col s3">
+					<a href="mypage.html">
+					<img src="image/face/2.png" class="circle" alt="近くのユーザー2" style="height: 100px; width: 100px;">
+					<p>ユーザー2</p>
+					</a>
+				</li>
+				<li class="near_list icons col s3">
+					<a href="mypage.html">
+						<img src="image/face/3.png" class="circle" alt="近くのユーザー3" style="height: 100px; width: 100px;">
+						<p>ユーザー3</p>
+					</a>
+				</li>
+				<li class="near_list icons col s3">
+					<a href="mypage.html">
+						<img src="image/face/7.png" class="circle" alt="近くのユーザー4" style="height: 100px; width: 100px;">
+						<p>ユーザー4</p>
+					</a>
+				</li>
+			</ul>
+		</div>
+
+		<!--フォローしているユーザーが出てくる-->
+		<div class="boxlist">
+			<p class="eachtitle">フレンドユーザー</p>
+			<ul id="follow_lists" class="row">
+				<li class="follow_list icons col s3">
+					<a href="mypage.html">
+						<img src="image/face/4.png" class="circle"  alt="フレンドユーザー1" style="height: 100px; width: 100px;">
+						<p>フレンドユーザー1</p>
+					</a>
+				</li>
+				<li class="follow_list icons col s3">
+					<a href="mypage.html">
+						<img src="image/face/5.png" class="circle"  alt="フレンドユーザー2" style="height: 100px; width: 100px;">
+						<p>フレンドユーザー2</p>
+					</a>
+				</li>
+				<li class="follow_list icons col s3">
+					<a href="mypage.html">
+						<img src="image/face/6.png" class="circle" alt="フレンドユーザー3" style="height: 100px; width: 100px;">
+						<p>フレンドユーザー3</p>
+					</a>
+				</li>
+				<li class="follow_list icons col s3">
+					<a href="mypage.html">
+						<img src="image/face/8.png" class="circle" alt="フレンドユーザー4" style="height: 100px; width: 100px;">
+						<p>フレンドユーザー4</p>
+					</a>
+					</li>
+				</ul>
+		</div>
+			
+	</div>
 
 	<!--JavaScript at end of body for optimized loading-->
 	<script type="text/javascript" src="js/materialize.min.js"></script>
