--- a/mypage.html
+++ b/mypage.html
@@ -388,74 +388,87 @@ a:active {
 	</head>
 
 	<body>
-		<div id="user" class="row">
-			<div class="col s4">
-				<img src="" class="circle user_detail_img" id="userIcon">
-			</div>
-			<div class="detail_data col s6">
-				<span class="detail_title">【USER】</span><span id="userName" class="user_detail_name"></span>
-				<br>
-				<span class="detail_title">【MAIL】</span><a href="mailto:contact@decrypt.tokyo" class="user_detail_mail">contact@decrypt.tokyo</a>
-				<br>
-				<span class="detail_title">【COMMENT】</span><span></span>
-			</div>
-			<div class="col s2">
-				<input type="button" class="follow_button btn-floating btn-large cyan pulse" value="フォロー">
-			</div>
-		</div>
-		<div id="stickers" class="row">
-			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="./image/sticker/1.png" class="sticker_img"></a>
-				<!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
-			</div>
-			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="./image/sticker/2.png" class="sticker_img"></a>
-				<!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
-			</div>
-			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="./image/sticker/3.png" class="sticker_img"></a>
-				<!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
-			</div>
-			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="./image/sticker/4.png" class="sticker_img"></a>
-				<!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
-			</div>
-			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="./image/sticker/1.png" class="sticker_img"></a>
-				<!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
-			</div>
-			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="./image/sticker/2.png" class="sticker_img"></a>
-				<!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
-			</div>
-			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="./image/sticker/3.png" class="sticker_img"></a>
-				<!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
-			</div>
-			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="./image/sticker/4.png" class="sticker_img"></a>
-				<!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
-			</div>
-			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="./image/sticker/1.png" class="sticker_img"></a>
-				<!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
-			</div>
-			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="./image/sticker/2.png" class="sticker_img"></a>
-				<!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
-			</div>
-			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="./image/sticker/3.png" class="sticker_img"></a>
-				<!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
-			</div>
-			<div id="sticker" class="col s3">
-				<a href="./detail.html"><img src="" class="sticker_img" id="stickerImage"></a>
-				<!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
-			</div>
-		</div>
-		<!--JavaScript at end of body for optimized loading-->
+        <div id="index-contents">
+            <!--全ページ共通のヘッダー部分(固定する)-->
+            <div id="top_header" class="boxlist" style="height: 80px;">
+                <div id="header_logo">
+                    <img src="image/logo.png" alt="ロゴ" style="height: 40px;width: 100px;" class="centerpos">
+                    <div id="user_info">
+                        <p id="name">Hattori</p>
+                        <img src="image/face/99.png" class="circle" alt="アイコン">
+                    </div>
+                </div>
+            </div>
+
+            <div id="user" class="row">
+                <div class="col s4">
+                    <img src="" class="circle user_detail_img" id="userIcon">
+                </div>
+                <div class="detail_data col s6">
+                    <span class="detail_title">【USER】</span><span id="userName" class="user_detail_name"></span>
+                    <br>
+                    <span class="detail_title">【MAIL】</span><a href="mailto:contact@decrypt.tokyo" class="user_detail_mail">contact@decrypt.tokyo</a>
+                    <br>
+                    <span class="detail_title">【COMMENT】</span><span></span>
+                </div>
+                <div class="col s2">
+                    <input type="button" class="follow_button btn-floating btn-large cyan pulse" value="フォロー">
+                </div>
+            </div>
+            <div id="stickers" class="row">
+                <div id="sticker" class="col s3">
+                    <a href="./detail.html"><img src="./image/sticker/1.png" class="sticker_img"></a>
+                    <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
+                </div>
+                <div id="sticker" class="col s3">
+                    <a href="./detail.html"><img src="./image/sticker/2.png" class="sticker_img"></a>
+                    <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
+                </div>
+                <div id="sticker" class="col s3">
+                    <a href="./detail.html"><img src="./image/sticker/3.png" class="sticker_img"></a>
+                    <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
+                </div>
+                <div id="sticker" class="col s3">
+                    <a href="./detail.html"><img src="./image/sticker/4.png" class="sticker_img"></a>
+                    <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
+                </div>
+                <div id="sticker" class="col s3">
+                    <a href="./detail.html"><img src="./image/sticker/1.png" class="sticker_img"></a>
+                    <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
+                </div>
+                <div id="sticker" class="col s3">
+                    <a href="./detail.html"><img src="./image/sticker/2.png" class="sticker_img"></a>
+                    <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
+                </div>
+                <div id="sticker" class="col s3">
+                    <a href="./detail.html"><img src="./image/sticker/3.png" class="sticker_img"></a>
+                    <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
+                </div>
+                <div id="sticker" class="col s3">
+                    <a href="./detail.html"><img src="./image/sticker/4.png" class="sticker_img"></a>
+                    <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
+                </div>
+                <div id="sticker" class="col s3">
+                    <a href="./detail.html"><img src="./image/sticker/1.png" class="sticker_img"></a>
+                    <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
+                </div>
+                <div id="sticker" class="col s3">
+                    <a href="./detail.html"><img src="./image/sticker/2.png" class="sticker_img"></a>
+                    <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
+                </div>
+                <div id="sticker" class="col s3">
+                    <a href="./detail.html"><img src="./image/sticker/3.png" class="sticker_img"></a>
+                    <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
+                </div>
+                <div id="sticker" class="col s3">
+                    <a href="./detail.html"><img src="" class="sticker_img" id="stickerImage"></a>
+                    <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
+                </div>
+            </div>
+            <!--JavaScript at end of body for optimized loading-->
+    </div>
+
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
 	</body>
 </html>
