--- a/detail.html
+++ b/detail.html
@@ -357,7 +357,7 @@ body {
 	padding: 5px;
 	text-align:center;
 	border-bottom: solid 5px #FFFFFF;
-	/** margin: 5px;**/
+	margin: 5px;
 }
 .title {
 	font-size: 30px;
