--- a/mypage.html
+++ b/mypage.html
@@ -2,9 +2,11 @@
 <html>
 	<head>
 		<!--Import Google Icon Font-->
-
+        <meta http-equiv="content-type" charset="utf-8">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        
+        <link rel="stylesheet" type="text/css" href="index.css">
 
 		<script>
 
@@ -320,7 +322,7 @@
 <style>
 
 body {
-	  background-color: #e0e0e0;
+	background-color: #e0e0e0;
 	width:600px;
 	height:700px;
 }
