--- a/detail.html
+++ b/detail.html
@@ -349,7 +349,7 @@ window.addEventListener('load', async function() {
 body {
 	width:600px;
 	height:700px;
-	  background-color: #e0e0e0;
+	  background-color: #ECECEC;
 }
 
 #detail {
@@ -408,6 +408,12 @@ a:active {
 	padding-left: 15px;
     font-size: 20px;
 		font-weight: bold;}
+	
+#add_sticker{
+	color: #ffffff;
+	width: 150px;
+	}
+	
 </style>
 
 
