--- a/detail.html
+++ b/detail.html
@@ -350,8 +350,7 @@ window.addEventListener('load', async function() {
 
 <style>
 body {
-	width:600px;
-	height:700px;
+	width:100%;
 	  background-color: #ECECEC;
 }
 
