--- a/mypage.html
+++ b/mypage.html
@@ -361,9 +361,8 @@ body {
 
 
 #stickers{
-	height:70%;
 	float:left;
-	text-align:center;
+	
 	/** overflow-y: auto; **/
 }
 
@@ -374,6 +373,8 @@ body {
 
 
 #sticker{
+	width:145px;
+	height:145px;
 	margin:10px 0px 0px 10px;
 }
 
