--- a/mypage.html
+++ b/mypage.html
@@ -372,7 +372,7 @@ body {
 }
 
 
-#sticker{
+.sticker{
 	width:145px;
 	height:145px;
 	margin:10px 0px 0px 10px;
@@ -422,51 +422,51 @@ a:active {
                 </div>
             </div>
             <div id="stickers" class="row">
-                <div id="sticker" class="col s3">
+                <div id="sticker" class="sticker col s3">
                     <a href="./detail.html"><img src="./image/sticker/1.png" class="sticker_img"></a>
                     <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
                 </div>
-                <div id="sticker" class="col s3">
+                <div id="sticker" class="sticker col s3">
                     <a href="./detail.html"><img src="./image/sticker/2.png" class="sticker_img"></a>
                     <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
                 </div>
-                <div id="sticker" class="col s3">
+                <div id="sticker" class="sticker col s3">
                     <a href="./detail.html"><img src="./image/sticker/3.png" class="sticker_img"></a>
                     <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
                 </div>
-                <div id="sticker" class="col s3">
+                <div id="sticker" class="sticker col s3">
                     <a href="./detail.html"><img src="./image/sticker/4.png" class="sticker_img"></a>
                     <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
                 </div>
-                <div id="sticker" class="col s3">
+                <div id="sticker" class="sticker col s3">
                     <a href="./detail.html"><img src="./image/sticker/1.png" class="sticker_img"></a>
                     <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
                 </div>
-                <div id="sticker" class="col s3">
+                <div id="sticker" class="sticker col s3">
                     <a href="./detail.html"><img src="./image/sticker/2.png" class="sticker_img"></a>
                     <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
                 </div>
-                <div id="sticker" class="col s3">
+                <div id="sticker" class="sticker col s3">
                     <a href="./detail.html"><img src="./image/sticker/3.png" class="sticker_img"></a>
                     <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
                 </div>
-                <div id="sticker" class="col s3">
+                <div id="sticker" class="sticker col s3">
                     <a href="./detail.html"><img src="./image/sticker/4.png" class="sticker_img"></a>
                     <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
                 </div>
-                <div id="sticker" class="col s3">
+                <div id="sticker" class="sticker col s3">
                     <a href="./detail.html"><img src="./image/sticker/1.png" class="sticker_img"></a>
                     <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
                 </div>
-                <div id="sticker" class="col s3">
+                <div id="sticker" class="sticker col s3">
                     <a href="./detail.html"><img src="./image/sticker/2.png" class="sticker_img"></a>
                     <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
                 </div>
-                <div id="sticker" class="col s3">
+                <div id="sticker" class="sticker col s3">
                     <a href="./detail.html"><img src="./image/sticker/3.png" class="sticker_img"></a>
                     <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
                 </div>
-                <div id="sticker" class="col s3">
+                <div id="sticker" class="sticker col s3">
                     <a href="./detail.html" id="stickerImage"></a>
                     <!-- <p id="sticker_title_001" class="sticker_title">ステッカー</p> -->
                 </div>
