--- a/mypage.html
+++ b/mypage.html
@@ -398,7 +398,9 @@ a:active {
             <!--全ページ共通のヘッダー部分(固定する)-->
             <div id="top_header" class="boxlist" style="height: 80px;">
                 <div id="header_logo">
+		    <a href="/">
                     <img src="image/logo.png" alt="ロゴ" style="height: 40px;width: 100px;" class="centerpos">
+		    </a>
                     <div id="user_info">
                         <p id="name">Hattori</p>
                         <img src="image/face/99.png" class="circle" alt="アイコン">
