--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 			<div id="header_logo">
 				<img src="image/logo.png" alt="ロゴ" style="height: 40px;width: 100px;" class="centerpos">
 				<div id="user_info">
+					<a href="mypage.html">
 					<p id="name">Hattori</p>
 					<img src="image/face/99.png" class="circle" alt="アイコン">
+					</a>
 				</div>
 			</div>
 		</div>
