--- a/detail.html
+++ b/detail.html
@@ -433,8 +433,10 @@ a:active {
                         <img src="image/logo.png" alt="ロゴ" style="height: 40px;width: 100px;" class="centerpos">
 			    </a>
                         <div id="user_info">
+				<a href="mypage.html">
                             <p id="name">Hattori</p>
                             <img src="image/face/99.png" class="circle" alt="アイコン">
+				</a>
                         </div>
                     </div>
                 </div>
